--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -5,7 +5,7 @@
     <br><br>
     <div class="container post-container">
         <h1 class="text-light text-center title">{{ blogpost.post_title}}</h1>
-        <div class="text-center"><i class="text-white">{{ blogpost.publish_date }}</i> by <a href="https://twitter.com/tu4ndoan">Tuan Doan</a></div>
+        <div class="text-center"><i class="text-white">{{ blogpost.date }}</i> <span class="text-white"> by </span> <a href="https://twitter.com/tu4ndoan">TD</a></div>
         <div class="bg-white post-container">
         <div class="post-img-container">
             <img id="myImg" src="{{ blogpost.feature_image }}" alt="nice and free images" class="post-img">
