--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -16,6 +16,11 @@
                     }
                 });
         </script>
+        <script>
+            if (reachedBottom == true) {
+                alert("reached Bottom, sir!")
+            }
+        </script>
     {% endblock %}
     {% block body %}
 
@@ -27,7 +32,7 @@
                 <br>
                     <h1 class="title"><a class="text-dark text-center" href="{% url 'blog:detail' posts.id %}">{{ posts.post_title }}</a></h1>
                     <div class="post-info text-center">
-                        <i>{{ posts.publish_date }}</i> by <a href="https://twitter.com/tu4ndoan">Tuan Doan</a>
+                        <i>{{ posts.date }}</i> by <a href="https://twitter.com/tu4ndoan">TD</a>
                     </div>
                     <br><br>
                 <div class="post-img-container">
